--- a/Portfolio-JRH/src/App.css
+++ b/Portfolio-JRH/src/App.css
@@ -1,3 +1,5 @@
 #root {
- 
+    margin: 0px;
+    /* background: linear-gradient(158deg, rgba(2,0,36,1) 0%, rgba(21,93,159,1) 50%, rgba(12,125,148,1) 100%);
+    background: linear-gradient(320deg, rgba(179,177,0,1) 0%, rgba(61,186,230,1) 29%, rgba(143,236,255,1) 67%); */
 }
