--- a/Portfolio-JRH/src/assets/css/themeStyle.css
+++ b/Portfolio-JRH/src/assets/css/themeStyle.css
@@ -9,19 +9,27 @@
 }
 
 :root {
-    /* Dark Mode */
-    --defaultDarkBackground: #000000;
+    /* DARK MODE */
+    /* Texts */
     --defaultDarkText: #ffffff;
+    --emphasisDark: #ffc400;
+    /* Nav Background and Pills */
+    --defaultDarkBackground: #000000;
     --pillDarkBackground: #ffffff;
     --pillDarkText: #000000;
-    --emphasisDark: #ffc400;
+    /* About Me Background */
+    --darkComponentBackground: #1c3149;
 
-    /* Light Mode */
-    --defaultLightBackground: #ffffff;
+    /* LIGHT MODE */
+    /* Texts */
     --defaultLightText: #000000;
+    --emphasisLight: #201df8;
+    /* Nav Background and Pills */
+    --defaultLightBackground: #ffffff;
     --pillLightBackground: #000000;
     --pillLightText: #ffffff;
-    --emphasisLight: #201df8;
+    /* About Me Background */
+    --lightComponentBackground: #f0f0f0;
 }
 
 /* NAV */
@@ -30,22 +38,20 @@
     background-color: var(--defaultDarkBackground);
     color: var(--defaultDarkText) !important;
 }
+
 .lightNav {
     background-color: var(--defaultLightBackground);
     color: var(--defaultLightText) !important;
 }
 
-.test {
-    border-bottom: 1px solid var(--emphasisDark);
-}
-
 /* Pills */
 .darkPill {
-    background-color: var(--defaultDarkBackground)!important;
+    background-color: var(--defaultDarkBackground) !important;
     color: var(--defaultDarkText) !important;
 }
+
 .lightPill {
-    background-color: var(--defaultLightBackground)!important;
+    background-color: var(--defaultLightBackground) !important;
     color: var(--defaultLightText) !important;
 }
 
@@ -53,6 +59,7 @@
     background-color: var(--pillDarkBackground) !important;
     color: var(--pillDarkText) !important;
 }
+
 .lightPill:hover {
     background-color: var(--pillLightBackground) !important;
     color: var(--pillLightText) !important;
@@ -82,6 +89,20 @@
 .darkBorder {
     border-bottom: 2px solid var(--emphasisDark);
 }
+
 .lightBorder {
     border-bottom: 2px solid var(--emphasisLight);
+}
+
+
+/* COMPONENTS */
+/* Background */
+.darkComponentBackground {
+    background-color: var(--darkComponentBackground);
+    color: var(--defaultDarkText);
+}
+
+.lightComponentBackground {
+    background-color: var(--lightComponentBackground);
+    color: var(--defaultLightText);
 }
