--- a/Portfolio-JRH/src/assets/css/themeStyle.css
+++ b/Portfolio-JRH/src/assets/css/themeStyle.css
@@ -109,28 +109,29 @@
 
 /* ABOUT ME SECTION*/
 /* Buttons */
-.darkAboutButton {
-    
-   }
-
-.lightAboutButton {
-
-}
-
 .darkAboutButton.inactive:hover {
     background-color: var(--pillDarkBackground);
     color: var(--pillDarkText);
 }
-
-
 .lightAboutButton.inactive:hover {
     background-color: var(--pillLightBackground);
     color: var(--pillLightText);
 }
-
 .darkAboutButton.active {
     background-color: var(--darkComponentBackground)
 }
 .lightAboutButton.active {
     background-color: var(--lightComponentBackground)
+}
+.darkAboutButton.active::before {
+    box-shadow: 5px 5px 0 5px var(--darkComponentBackground);
+}
+.lightAboutButton.active::before {
+    box-shadow: 5px 5px 0 5px var(--lightComponentBackground);
+}
+.darkAboutButton.active::after {
+    box-shadow: -5px 5px 0 5px var(--darkComponentBackground);
+}
+.lightAboutButton.active::after {
+    box-shadow: -5px 5px 0 5px var(--lightComponentBackground);
 }
