--- a/Portfolio-JRH/src/assets/css/timeline.css
+++ b/Portfolio-JRH/src/assets/css/timeline.css
@@ -17,22 +17,18 @@
 .timelineYearButtonStyle {
     background-color: transparent;
     border-radius: 9px;
-    padding: 10px 22px 10px 22px;
+    padding: 10px 30px 10px 22px;
+    width: 90%;
     font-size: 1.2rem;
     font-family: "DM Serif Display", serif;
+    transition: .3s;
+}
+
+.timelineYearButtonStyle:hover {
+    border-radius: 2px;
 }
 
 
 
 
 
-
-
-/* THEME TRANSFER */
-.timelineYearButtonStyle {
-    border: 1px solid #ffffff;    
-}
-
-.timelineEventStyle {
-    color: #ffffff;
-}
