--- a/Portfolio-JRH/src/assets/css/style.css
+++ b/Portfolio-JRH/src/assets/css/style.css
@@ -71,3 +71,24 @@
 .shadowAbout {
     box-shadow: 20px 20px 100px 5px #5c7070;
 }
+
+/* What I know */
+.cardFlip {
+    padding: 10px;
+    margin: 10px;
+    position: relative;
+    transform-style: preserve-3d;
+}
+
+.front {
+    backface-visibility: hidden;
+}
+
+.back {
+    padding: 10px;
+    transform: rotateY(-180deg);
+    position: absolute;
+    backface-visibility: hidden;
+    text-align: center;
+    font-size: 2.0rem;
+}
