--- a/Portfolio-JRH/src/assets/css/style.css
+++ b/Portfolio-JRH/src/assets/css/style.css
@@ -161,9 +161,9 @@
     font-size: 2.2rem;
 }
 
-.triangleList {
+.triangleList li {
     list-style-type: none;
-    padding: 30px;
+    padding: 10px;
     font-size: 1.6rem;
 }
 
@@ -172,9 +172,13 @@
 .triangleButtonRight {
     font-weight: 500;
     box-shadow: 10px 10px 150px 10px #5c7070;
-    border: none;
-    background-color: transparent;
-    font-size: 1.4rem;}
+    border: 3px solid white;
+    border-radius: 19px;
+    background-color: rgba(92, 112, 112, .3);
+    font-size: 1.4rem;
+    padding: 50px 10px;
+    transition: background-color .5s ease-out, border .5s ease-out;
+ }
 
 .triangleButtonLeft {
     writing-mode: sideways-lr;
